@@ -1,4 +1,4 @@
-/* $Id: ares_cancel.c,v 1.10 2007-10-04 08:06:25 sesse Exp $ */
+/* $Id: ares_cancel.c,v 1.11 2009-08-03 11:51:06 bagder Exp $ */
 
 /* Copyright (C) 2004 by Daniel Stenberg et al
  *
@@ -36,7 +36,7 @@ void ares_cancel(ares_channel channel)
   {
     query = list_node->data;
     list_node = list_node->next;  /* since we're deleting the query */
-    query->callback(query->arg, ARES_ETIMEOUT, 0, NULL, 0);
+    query->callback(query->arg, ARES_ECANCELLED, 0, NULL, 0);
     ares__free_query(query);
   }
 #ifndef NDEBUG
