@@ -9,6 +9,7 @@ Changed:
  o a build-time configured ares_socklen_t is now used instead of socklen_t
  o new ares_library_init() and ares_library_cleanup() functions
  o new --enable-curldebug configure option
+ o ARES_ECANCELLED is now sent as reason for ares_cancel()
 
 Fixed:
 
@@ -20,6 +21,7 @@ Fixed:
 
 Thanks go to these friendly people for their efforts and contributions:
 
- Phil Blundell, Japheth Cleaver, Yang Tse, Gregor Jasny, Joshua Kwan
+ Phil Blundell, Japheth Cleaver, Yang Tse, Gregor Jasny, Joshua Kwan,
+ Timo Teras
 
 Have fun!
